Lagt til connection pooling og laget en repl fil for å starte webserver

--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -9,6 +9,7 @@
     <body>
         <div class="container">
             <h1>{{header}}</h1>
+            <h2>Dill</h2>
             {% block content %}
             {% endblock %}
         </div>
