Oppdater medlem i kvasi-rest versjon

--- a/resources/templates/medlemmer.html
+++ b/resources/templates/medlemmer.html
@@ -11,7 +11,7 @@
     <tbody>
         {% for medlem in medlemmer %}
             <tr>
-                <td><a class="btn btn-default btn-sm" href="medlem/{{medlem.id}}">Vis</a></td>
+                <td><a class="btn btn-default btn-sm" href="medlemmer/{{medlem.id}}">Vis</a></td>
                 <td>{{medlem.fornavn}}</td>
                 <td>{{medlem.etternavn}}</td>
             </tr>
