--- a/resources/templates/medlem.html
+++ b/resources/templates/medlem.html
@@ -4,15 +4,15 @@
     <input type="hidden" name="_method" value="{{method}}"/>
     <div class="form-group">
         <label for="fornavn">Fornavn</label>
-        <input type="text" class="form-control" id="fornavn" placeholder="Fornavn" value="{{medlem.fornavn}}">
+        <input type="text" class="form-control" name="fornavn" id="fornavn" placeholder="Fornavn" value="{{medlem.fornavn}}">
     </div>
     <div class="form-group">
         <label for="etternavn">Etternavn</label>
-        <input type="text" class="form-control" id="etternavn" placeholder="Etternavn" value="{{medlem.etternavn}}">
+        <input type="text" class="form-control" name="etternavn" id="etternavn" placeholder="Etternavn" value="{{medlem.etternavn}}">
     </div>
     <div class="form-group">
         <label for="prodnr">Produsentnr</label>
-        <input type="text" class="form-control" id="prodnr" placeholder="Produsentnr" value="{{medlem.prodnr}}">
+        <input type="text" class="form-control" name="prodnr" id="prodnr" placeholder="Produsentnr" value="{{medlem.prodnr}}">
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
 </form>
