Lag ny medlem også

--- a/resources/templates/medlem.html
+++ b/resources/templates/medlem.html
@@ -9,7 +9,7 @@
 {% endfor %}
 </ul>
 {% endif %}
-<form role="form" method="post">
+<form role="form" method="post" action="{{action}}">
     <input type="hidden" name="__method" value="{{method}}"/>
     <div class="form-group">
         <label for="fornavn">Fornavn</label>
