--- a/resources/templates/medlemmer.html
+++ b/resources/templates/medlemmer.html
@@ -1,5 +1,7 @@
 {% extends "templates/base.html" %}
 {% block content %}
+
+<a class="btn btn-default btn-sm" href="medlemmer/ny">Ny</a>
 <table class="table table-striped">
     <thead>
         <tr>
