--- a/resources/templates/medlem.html
+++ b/resources/templates/medlem.html
@@ -23,6 +23,20 @@
         <label for="prodnr">Produsentnr</label>
         <input type="text" class="form-control" name="prodnr" id="prodnr" placeholder="Produsentnr" value="{{medlem.prodnr}}">
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
+    <button type="submit" class="btn btn-default oppdater">Submit</button>
+    <button type="submit" class="btn btn-danger slett">Slett</button>
 </form>
+<script>
+    $('.slett').on('click', function() {
+        if($('[name=__method]').val() === "") {
+            $('[name=__method]').val('DELETE');
+        }
+    });
+
+    $('.oppdater').on('click', function() {
+        if($('[name=__method]').val() === "") {
+            $('[name=__method]').val('PUT');
+        }
+    });
+</script>
 {% endblock %}
