Autentisering og autorisajon på bedre stell for rest og html

--- a/resources/templates/login.html
+++ b/resources/templates/login.html
@@ -1,5 +1,11 @@
 {% extends "templates/base.html" %}
+
+
 {% block content %}
+
+{% if message %}
+<p>{{message}}</p>
+{% endif %}
 
 <form role="form" method="post">
     <div class="form-group">
